    (Stanislav Shwartsman)
  - added missed #GP(0) exception when loading incorrect flags combination 
    to CR0 (Stanislav Shwartsman)
  - implemented CR8 register (aliased to APIC.TPR[7:4]) in x86-64 mode
  - implemented NXE bit (No-Execute page protection) support for x86-64
  - in case of --enable-ignore-bad-msr enabled read ignored MSRs as zero
  - enabled #DE and #TSD and #MCE bits in CR4 register, previosly setting
    of one of these bits generated #GP(0) (Stanislav, Volker Ruppert)

- FPU
  - totally rewritten all FPU code based on softfloat library 
    (Stanislav Shwartsman)
  - significantly improved accuracy of all floating point
    instructions.
  - implemented all missed P6 and PNI floating point instructions.
  - hundreds of bug fixes in FPU code.

  TODO:
    ! Unmasked underflow/overflow should correct the result 
      by magic number for all operations, including float32 
      and float64.

- APIC (Zwane Mwaikambo)
  - APIC arbitration
  - Processor priority
  - Various interrupt delivery fixes
  - Focus processor checking
  - ExtINT delivery

- Disassembler
  - fixed MOV opcode 0x88, had exchanged the operands (h.johansson)
  - fixed MOV opcode 0xA3, had wrong operand size (h.johansson)
  - fixed BOUND opcode 0x62 (Stanislav)
  - fixed CALLW opcode 0xFF /3 and JMPW opcode 0xFF /5 (Stanislav)
  - fixed INS opcode 0x6D, had wrong operand size (Stanislav)
  - fixed disassembly for repeatable instructions (Stanislav)
  - fixed sign-extended immediate opcodes (Stanislav)
  - fixed MOVSS/MOVSD instructions opcode names (Stanislav)
  - fixed NEG instruction opcode name (Stanislav)
  - fixed CMPXCHG8B instruction, had wrong operand size (Stanislav)
  - fixed floating point instructions operands (Stanislav)
  - experimental support of AT&T syntax in disassembler (Stanislav)

  TODO:
   - X86-64 support

- I/O devices
  - general
    - handle cpu reset through port 0x92
    - new memory handler API for PCI i/o and memory handling (Frank Cornelis)